magic/base/alb-ingress-rules/alb-ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alb-ingress-rules
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internal
  labels:
    app: alb-ingress-rules
spec:
  rules:
    - http:
        paths:
          - path: /pink/*
            backend:
              serviceName: pink-api
              servicePort: 8000
    - http:
        paths:
          - path: /blue/*
            backend:
              serviceName: blue-api
              servicePort: 8000
    - http:
        paths:
          - path: /yellow/*
            backend:
              serviceName: yellow-api
              servicePort: 8000
    - http:
        paths:
          - path: /red/*
            backend:
              serviceName: red-api
              servicePort: 8000
